[gd_scene load_steps=12 format=3 uid="uid://c3teipcxyrhda"]

[ext_resource type="Texture2D" uid="uid://dpeb8egh27bt6" path="res://Assets/Images/Menus/Panels/PanelHQ.png" id="1_knl6y"]
[ext_resource type="Script" path="res://Assets/Levels/UI/MainMenuOptions/Options.gd" id="1_v7gf6"]
[ext_resource type="Texture2D" uid="uid://cp05egbg0061x" path="res://Assets/Images/Menus/Buttons/Button_Confirm.png" id="2_w3ef5"]
[ext_resource type="Texture2D" uid="uid://bivu8sir28qdk" path="res://Assets/Images/Menus/Buttons/Button.png" id="3_mdbld"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_21qvc"]
texture = ExtResource("1_knl6y")
modulate_color = Color(0.74558, 0.74558, 0.74558, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fbvxt"]
texture = ExtResource("2_w3ef5")
expand_margin_left = 50.0
expand_margin_top = 20.0
expand_margin_right = 50.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pp57i"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v1ujw"]
texture = ExtResource("3_mdbld")
texture_margin_left = 50.0
texture_margin_top = 20.0
texture_margin_right = 50.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r244p"]
texture = ExtResource("2_w3ef5")
expand_margin_left = 50.0
expand_margin_top = 20.0
expand_margin_right = 50.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h2t0w"]
texture = ExtResource("3_mdbld")
expand_margin_left = 50.0
expand_margin_top = 20.0
expand_margin_right = 50.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y8xec"]
texture = ExtResource("3_mdbld")
expand_margin_left = 50.0
expand_margin_top = 20.0
expand_margin_right = 50.0
expand_margin_bottom = 20.0

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v7gf6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_21qvc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = 53.0
offset_right = 55.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
rounded = true

[node name="Mute" type="CheckBox" parent="VBoxContainer/VolumeSlider"]
layout_mode = 0
offset_left = -4.0
offset_top = 15.0
offset_right = 20.0
offset_bottom = 39.0

[node name="Label" type="Label" parent="VBoxContainer/VolumeSlider/Mute"]
layout_mode = 0
offset_left = 23.0
offset_right = 64.0
offset_bottom = 23.0
text = "Mute
"

[node name="Label" type="Label" parent="VBoxContainer/VolumeSlider"]
layout_mode = 0
offset_top = -23.0
offset_right = 59.0
text = "Volume"

[node name="BackToHome" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_fbvxt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pp57i")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_v1ujw")
theme_override_styles/hover = SubResource("StyleBoxTexture_r244p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_h2t0w")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_y8xec")
theme_override_styles/normal = SubResource("StyleBoxTexture_h2t0w")
text = "Back To Menu"

[connection signal="value_changed" from="VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/VolumeSlider/Mute" to="." method="_on_mute_toggled"]
[connection signal="pressed" from="VBoxContainer/BackToHome" to="." method="_on_back_pressed"]
